deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-manager
  labels:
    app: task-manager
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-manager
  template:
    metadata:
      labels:
        app: task-manager
    spec:
      containers:
      - name: task-manager
        image: damirkrepe/task-manager:0.3
        ports:  
        - containerPort: 8080  
---
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: NodePort      
  selector:
    app: task-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30080
