ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-manager-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: task-manager.local
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
